--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-data-table-component": "^7.5.4",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-multi-select-component": "^4.3.4",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
